10Sep19=======================================================================
1. Improve DXSql database filtering to exclude most via <locator> type 
   reports.
2. Add CTY-2913 prefixes + wpxloc.raw
14Jul18=======================================================================
1. Add CTY-2808 prefixes + wpxloc.raw
23Jan18=======================================================================
1. Add CTY-2802 prefixes
12May17=======================================================================
1. Fix sh/425 (mostly)
2. Fix AsyncMsg line ending issues
3. Set defaults for $clusteraddr/port to allow easier swapping from 
   master <-> mojo branches for testing fixes.
4. Add CTY-2705 prefixes
05May17=======================================================================
1. Add CTY-2705 prefixes
04Apr17=======================================================================
1. Add CTY-2704 prefixes
21Feb17=======================================================================
1. Fix sh/dx on 14050 so it works as expected
2. Add CTY-2702 prefixes
02Jan17=======================================================================
1. Add CTY-2615 prefixes
26Dec16=======================================================================
1. Fix some possible routes to $myalias callsigns becoming nodes.
22Nov16=======================================================================
1. Add CTY-2614 prefixes
21Nov16=======================================================================
1. Add CTY-2613 prefixes
18Aug16=======================================================================
1. Add CTY-2610
08Jul16=======================================================================
1. Add latest wpxloc.raw
2. Add CTY-2609
04Jan16=======================================================================
1. Add CTY-2601 prefix file
02Jan16=======================================================================
1. fix new URL for sh/425 command